* gc.c (rb_gc_finalize_deferred, rb_objspace_call_finalizer):   should use ATOMIC_EXCHANGE() to check the previous value.   [ruby-dev:44596] [Bug #5439]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@33460 b2dd03c8-39d4-4d8f-98ff-823fe69b080e